--- a/layouts/partials/list-articles.html
+++ b/layouts/partials/list-articles.html
@@ -1,3 +1,3 @@
 <section id="two" class="spotlights">
-  <div id="gallery" class="flickr-gallery" data-flickrid="{{ .flickrId }}" style="display:none;"></div>
+  <div id="gallery" class="flickr-gallery" data-flickrid="{{ .Params.flickrId }}" style="display:none;" flickrlist></div>
 </section>
