--- a/layouts/partials/scripts-custom.html
+++ b/layouts/partials/scripts-custom.html
@@ -1,3 +1,4 @@
-<script src="npm/angular.min.js"></script>
-<script src="nx/flickr.js" type="text/javascript"></script>
-<script src="nx/app.js" type="text/javascript"></script>
+<script src="{{ .Site.BaseURL }}npm/angular.min.js"></script>
+<script src="{{ .Site.BaseURL }}npm/unitegallery/js/unitegallery.min.js"></script>
+<script src="{{ .Site.BaseURL }}nx/flickr.js" type="text/javascript"></script>
+<script src="{{ .Site.BaseURL }}nx/app.js" type="text/javascript"></script>
