:bug: Get flickr data and return to flickrlist directive

--- a/layouts/partials/list-articles.html
+++ b/layouts/partials/list-articles.html
@@ -1,3 +1,4 @@
 <section id="two" class="spotlights" ng-app="nx" ng-controller="mainController">
+  {{ .Params.flickrId }}
   <div id="gallery" class="flickr-gallery" flickrid="{{ .Params.flickrId }}" style="display:none;" flickrlist></div>
 </section>
