--- a/layouts/partials/postcustom.html
+++ b/layouts/partials/postcustom.html
@@ -1,3 +1,11 @@
 <section id="two" class="spotlights" ng-app="nx" ng-controller="mainController">
     <div id="gallery" class="flickr-gallery" flickrid="{{ .Params.flickrId }}" flickrlist></div>
 </section>
+
+<script src="{{ .Site.BaseURL }}npm/jquery.min.js"></script>
+<script src="{{ .Site.BaseURL }}npm/angular.min.js"></script>
+<script src="{{ .Site.BaseURL }}npm/unitegallery/js/unitegallery.min.js"></script>
+<script src="{{ .Site.BaseURL }}npm/unitegallery/themes/tiles/ug-theme-tiles.js"></script>
+<script src="{{ .Site.BaseURL }}nx/flickr.js" type="text/javascript"></script>
+<script src="{{ .Site.BaseURL }}nx/photoui.js" type="text/javascript"></script>
+<script src="{{ .Site.BaseURL }}nx/app.js" type="text/javascript"></script>
