:lipstick: Update copyright styling

--- a/site/layouts/partials/htmlhead.html
+++ b/site/layouts/partials/htmlhead.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}assets/css/main.css" />
         <noscript><link rel="stylesheet" href="{{ .Site.BaseURL }}assets/css/noscript.css" /></noscript>
         <!-- CUSTOM -->
-        <link href="{{ .Site.BaseURL }}npm/unitegallery/css/unite-gallery.css" rel="stylesheet" type="text/css" />
+		<link href="{{ .Site.BaseURL }}npm/unitegallery/css/unite-gallery.css" rel="stylesheet" type="text/css" />
+		<link href="{{ .Site.BaseURL }}nx/main.css" rel="stylesheet" type="text/css" />
         <!-- CUSTOM END -->
 	</head>
