Add netlify js to base

--- a/site/layouts/partials/scripts/index.html
+++ b/site/layouts/partials/scripts/index.html
@@ -15,3 +15,5 @@
 <script src="{{ .Site.BaseURL }}nx/flickr.js" type="text/javascript"></script>
 <script src="{{ .Site.BaseURL }}nx/photoui.js" type="text/javascript"></script>
 <script src="{{ .Site.BaseURL }}nx/app.js" type="text/javascript"></script>
+
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
